FIX: errors pointed out by oli

--- a/02.tex
+++ b/02.tex
@@ -111,7 +111,7 @@
 \subsubsection{Binomial Verteilung}
 \begin{itemize}
     \item $X \sim Bin(n, p)$, $\implies Bin(1, p) = Be(p)$
-    \item $p_X(k) = P[X = k] = {k\choose k} p^k (1 - p)^{n - k}, \ k = 0, \dots, n$
+    \item $p_X(k) = P[X = k] = {n\choose k} p^k (1 - p)^{n - k}, \ k = 0, \dots, n$
     \item $\mc{W}(X) = \{0, \dots, n\}$
     \item $E[X] = \sum_{i=1}^{n} E[Y_i] = np$
     \item $Var[X] = \sum_{n=1}^{n} Var[Y_i] = np(1 - p)$
