--- a/03.tex
+++ b/03.tex
@@ -40,7 +40,7 @@
 \begin{cases}
     0 &\text{für } t < a\\
     \frac{t - a}{b - a} &\text{für } a \le t \le b\\
-    t &\text{ für } t > b
+    1 &\text{ für } t > b
 \end{cases}$
     \item $E[X] = \int_{a}^{b} x \frac{1}{b - a} \mathrm{d}x = \frac{a + b}{2}$
     \item $Var[X] = E[X^2] - (E[X])^2 = \frac{1}{12}(b - a)^2$
