--- a/04.tex
+++ b/04.tex
@@ -9,7 +9,7 @@
         \begin{itemize}
             \item Die \textit{momenterzeugende} Funktion einer ZV $X$ ist $M_X(t) := E[e^{tX}], t \in \R$. Das ist immer wohldefiniert in $[0, \infty]$, kann aber $+\infty$ werden.
             \item Seien $X_1, \dots, X_n$ i.i.d. ZV, für welche $M_X(t)$ für alle $t \in \R$ endlich ist. Für jedes $b \in \R$ gilt dann: $P[S_n \ge b] \le \exp(\inf_{t \in \R} (n \log M_x(t) - tb))$
-            \item Seine $X_1, \dots X_n$ unabhängig mit $X_i \sim Be(p_i)$ und $S_n = \sum_{i=1}^{n} X_i$. Sei $\mu_n := E[S_n] = \sum_{i=1}^{n} p_i$ und $\delta > 0$. Dann gilt: $P[S_n \ge (1 + \delta) \mu_n] \le (\frac{e^\delta}{(1 + \delta)^{1 + \delta}})^{\mu_n}$
+            \item Seien $X_1, \dots X_n$ unabhängig mit $X_i \sim Be(p_i)$ und $S_n = \sum_{i=1}^{n} X_i$. Sei $\mu_n := E[S_n] = \sum_{i=1}^{n} p_i$ und $\delta > 0$. Dann gilt: $P[S_n \ge (1 + \delta) \mu_n] \le (\frac{e^\delta}{(1 + \delta)^{1 + \delta}})^{\mu_n}$
         \end{itemize}
 \end{itemize}
 
