--- a/08.tex
+++ b/08.tex
@@ -3,7 +3,7 @@
 \section{Konfidenzbereiche}
 Wir suchen aus einer Familie $(P_\theta)_{\theta \in \Theta}$ von Modellen eines, das zu unseren Daten $x_1, \dots, x_n$ passt. Ein Schätzer für $\theta$ gibt und dabei einen einzelnen zufälligen möglichen Parameterwert. Weil es schwierig ist, mit diesem einen Wert dem richtigen Parameter zu treffen, suchen wir nun stattdessen eine Teilmenge des Parameterbereichs, die hoffentlich den wahren Parameter enthält.
 \begin{itemize}
-    \ides{Konfidenzbereiche (KB):} für $\theta$ zu Daten $x_1, \dots, x_n$ eine Menge $C(x_1, \dots, x_n) \subseteq \Theta$; in den meisten Fällen ist das ein Intervall, dessen Endpunkte von $x_1, \dots, x_n$ abhängen. Ersetzen wir die Daten $x_1, \dots, x_n$ durch die sie generierende ZV so ist $\overset{\sim}{C} := C(X_1, \dots, X_n)$ also eine zufällige Teilmenge von $\Theta$, mit Realisierung $\overset{\sim}{C}(\omega) = C(X_1(\omega), \dots, X_n(\omega))$ bei einem festen $\omega$. Ein solches $C$ heisst KB zum Niveau $1 - \alpha$, falls gilt: $P_\theta[X(X_1, \dots, X_n) \ni \theta] \ge 1 - \alpha \quad \forall \theta \in \Theta$, d.h. in jedem Modell erwischt man den Parameter mit grosser WS.
+    \ides{Konfidenzbereiche (KB):} für $\theta$ zu Daten $x_1, \dots, x_n$ eine Menge $C(x_1, \dots, x_n) \subseteq \Theta$; in den meisten Fällen ist das ein Intervall, dessen Endpunkte von $x_1, \dots, x_n$ abhängen. Ersetzen wir die Daten $x_1, \dots, x_n$ durch die sie generierende ZV so ist $\overset{\sim}{C} := C(X_1, \dots, X_n)$ also eine zufällige Teilmenge von $\Theta$, mit Realisierung $\overset{\sim}{C}(\omega) = C(X_1(\omega), \dots, X_n(\omega))$ bei einem festen $\omega$. Ein solches $C$ heisst KB zum Niveau $1 - \alpha$, falls gilt: $P_\theta[C(X_1, \dots, X_n) \ni \theta] \ge 1 - \alpha \quad \forall \theta \in \Theta$, d.h. in jedem Modell erwischt man den Parameter mit grosser WS.
 \end{itemize}
 
 \subsection{Konfidenzbereiche - Test - Dualität}
