--- a/07.tex
+++ b/07.tex
@@ -14,7 +14,7 @@
             \ides{$1$:} Hypothese $H_0$ wird abgelehnt
             \ides{$0$:} Hypothese $H_0$ wird akzeptiert
         \end{itemize}
-        Konkreter: Man hat eine Abbildung $t: \R^n \to \R$ und einen \textbf{kritischen Bereich} oder \textbf{Verwertungsbereich} $K \subseteq \R$. Die ZV $T = t(X_1, \dots, X_n)$ heisst \textbf{Teststatistik}. Die Entscheidungsregel ist $I_{\{t(x_1, \dots, x_n) \in K\}}$
+        Konkreter: Man hat eine Abbildung $t: \R^n \to \R$ und einen \textbf{kritischen Bereich} oder \textbf{Verwerfungsbereich} $K \subseteq \R$. Die ZV $T = t(X_1, \dots, X_n)$ heisst \textbf{Teststatistik}. Die Entscheidungsregel ist $I_{\{t(x_1, \dots, x_n) \in K\}}$
         \ides{Fehler $\mathbf{1.}$ Art:} Hypothese zu unrecht abgelehnt: Passiert für $\theta \in \Theta_0$ und $T \in K$. $P_\theta[T \in K]$ für $\theta \in \Theta_0$ ist die WS für Fehler $1.$ Art.
         \ides{Fehler $\mathbf{2.}$ Art:} Hypothese zu unrecht nicht verworfen: Passiert für $\theta \in \Theta_A$ und $T \notin K$. $P_\theta[T \notin K] = 1 - P_\theta[T \in K]$ für $\theta \in \Theta_A$ ist die WS für Fehler $2.$ Art.
     \ides{Signifikanzniveau:} Grundsätzlich möchte man $\theta \mapsto P_\theta[T \in K]$ auf $\Theta_0$ möglichst klein und auf $\Theta_A$ möglichst gross haben. Da diese meist stetig ist und $\Theta_0$ und $\Theta_A$ meist nebeneinander liegen ist ein gleichzeitiges min-/maximieren von $\Theta_0/\Theta_A$ nicht möglich. Deshalb gibt es folgendes zweistufiges Vorgehen:
@@ -43,14 +43,14 @@ Bei zusammengesetzten $\theta_0/\theta_A$ betrachtet man den \textbf{verallgemei
 
 \subsection{Beispiele}
 \subsubsection{z-Test (Test für EW bei bekannter Var)}
-Sind $X_1, \dots, X_n$ i.i.d. $\sim \mc{N}(\mu, \sigma^2)$ unter $P_\theta$ mit bekannter Var $\sigma^2$, und wir wollen die Hypothese $H_0: \theta = \theta_0$ testen. Mögliche Alternativen $H_A$ sind $\theta > \theta_0$ oder $\theta < \theta_0$ (\textbf{einseitig}) oder $\theta \neq \theta_0$ (\textbf{zweiseitig}). Die Teststatistik ist $T := \frac{\overline{X}_n - \theta_0}{\frac{\sigma}{\sqrt{n}}} \sim \mc{N}(0, 1)$ unter $P_{\theta_0}$. Der kritische Bereich $K$ ist von der Form $(c_>, \infty)$, $(-\infty, c_<)$, bzw. $(-\infty, -c_{\neq}) \cup (c_{\neq}, + \infty)$. Die Konstanten $c_>, x_<, c_{\neq}$ bestimmt man zum gewählten Niveau mit Hilfe der Verteilung von $T$ unter $P_{\theta_0}$. Zum Beispiel liefert die Bedingung $\alpha = P_{\theta_0}[T \in K_>] = P_{\theta_0}[T > c_>] = 1 - P_{\theta_0}[T \le c_>] = 1 - \Phi(c_>)$, dass $c_> = \Phi^{-1}(1 - \alpha) =: z_{1 - \alpha}$ das sogenannte $(1 - \alpha)$-\textbf{Quantil} der $\mc{N}(0, 1)$ Verteilung sein muss; Für $\theta > \theta_0$ verwirft man $H_0$, falls $\overline{X}_n > \theta_0 + z_{1 - \alpha} \frac{\sigma}{\sqrt{n}}$ ist. Analog ist $c_< = z_\alpha = -z_{1 - \alpha}$ und $c_{\neq} = z_{1 - \frac{\alpha}{2}}$, wobei wir die Symmetrie der $\mc{N}(0, 1)$ Verteilung ausnutzen; Es gilt nämlich $\alpha = P_{\theta_0}[t < c_<] = P_{\theta_0}[T > -c_<]$ für $-c_< = z_{1 - \alpha}$ und $\alpha = P_{\theta_0}[T \in K_{\neq}] = P_{\theta_0} [T < -c_{\neq}] + P_{\theta_0}[T > c_{\neq}] = \Phi(-c_{\neq}) + 1 - \Phi(c_{\neq}) = 2(1 - \Phi(c_{\neq}))$
+Sind $X_1, \dots, X_n$ i.i.d. $\sim \mc{N}(\mu, \sigma^2)$ unter $P_\theta$ mit bekannter Var $\sigma^2$, und wir wollen die Hypothese $H_0: \theta = \theta_0$ testen. Mögliche Alternativen $H_A$ sind $\theta > \theta_0$ oder $\theta < \theta_0$ (\textbf{einseitig}) oder $\theta \neq \theta_0$ (\textbf{zweiseitig}). Die Teststatistik ist $T := \frac{\overline{X}_n - \theta_0}{\frac{\sigma}{\sqrt{n}}} \sim \mc{N}(0, 1)$ unter $P_{\theta_0}$. Der kritische Bereich $K$ ist von der Form $(c_>, \infty)$, $(-\infty, c_<)$, bzw. $(-\infty, -c_{\neq}) \cup (c_{\neq}, + \infty)$. Die Konstanten $c_>, c_<, c_{\neq}$ bestimmt man zum gewählten Niveau mit Hilfe der Verteilung von $T$ unter $P_{\theta_0}$. Zum Beispiel liefert die Bedingung $\alpha = P_{\theta_0}[T \in K_>] = P_{\theta_0}[T > c_>] = 1 - P_{\theta_0}[T \le c_>] = 1 - \Phi(c_>)$, dass $c_> = \Phi^{-1}(1 - \alpha) =: z_{1 - \alpha}$ das sogenannte $(1 - \alpha)$-\textbf{Quantil} der $\mc{N}(0, 1)$ Verteilung sein muss; Für $\theta > \theta_0$ verwirft man $H_0$, falls $\overline{X}_n > \theta_0 + z_{1 - \alpha} \frac{\sigma}{\sqrt{n}}$ ist. Analog ist $c_< = z_\alpha = -z_{1 - \alpha}$ und $c_{\neq} = z_{1 - \frac{\alpha}{2}}$, wobei wir die Symmetrie der $\mc{N}(0, 1)$ Verteilung ausnutzen; Es gilt nämlich $\alpha = P_{\theta_0}[t < c_<] = P_{\theta_0}[T > -c_<]$ für $-c_< = z_{1 - \alpha}$ und $\alpha = P_{\theta_0}[T \in K_{\neq}] = P_{\theta_0} [T < -c_{\neq}] + P_{\theta_0}[T > c_{\neq}] = \Phi(-c_{\neq}) + 1 - \Phi(c_{\neq}) = 2(1 - \Phi(c_{\neq}))$
 
 \subsubsection{t-Test (Test für EW bei unbekannter Var)}
 Sind $X_1, \dots, X_n$ i.i.d. $\sim \mc{N}(\mu, \sigma^2)$ unter $P_{\overrightarrow{\theta}}$ wobei $\overrightarrow{\theta} = (\mu, \sigma^2)$ und die Var $\sigma^2$ ist unbekannt. Wir wollen die Hypothese $\mu = \mu_0$ testen. Explizit: $\Theta_0 = \{\mu_0\} \times (0, \infty) = \{\overrightarrow{\theta} = (\mu, \sigma^2) \mid \mu = \mu_0\}$. Die Teststatistik ist $T := \frac{\overline{X}_n - \mu_0}{\frac{S}{\sqrt{n}}} \sim t_{n - 1}$ unter $P_{\theta_0}$. Wir ersetzen unbekannte Var durch Schätzer $S^2 = \frac{1}{n - 1} \sum_{i=1}^{n} (X_i - \overline{X}_n)^2$ für $\sigma^2$.
 Der Kritische Bereich hat eine der drei Formen aus dem letzten Beispiel; die kritischen Werte hier sind $c_> = t_{n - 1, 1 - \alpha}$, bzw. $c_< = t_{n - 1, \alpha} = -t_{n - 1, 1 - \alpha}$, bzw $c_{\neq} = t_{n - 1, 1 - \frac{\alpha}{2}}$. Hier bezeichnen wir mit $t_{m, \gamma}$ das $\gamma$-\textbf{Quantil} einer $t_m$-Verteilung, d.h. denjenigen Wert $t_{m, \gamma}$, für den gilt $P[X \le t_{m, \gamma}] = \gamma$ für $X \sim t_m$. Diese Werte findet man in Tabellen.
 
 \subsubsection{Gepaarter Zweistichproben-Test bei $\mc{N}$}
-Sind $X_1, \dots, X_n$ i.i.d. $\sim \mc{N}(\mu_X, \sigma^2)$ und $Y_1, \dots, Y_m$ i.i.d $\sim(\mu_Y, \sigma^2)$ unter $P_\theta$; insbesondere ist $m = n$ unter die Varianz $\sigma^2$ bei beiden Stichproben dieselbe. In dieser Situation kann man Tests über den Vergleich von $\mu_X$ und $\mu_Y$ auf den Fall nur einer Strichprobe zurückführen; die Differenzen $Z_i = X_i - Y_i$ sind nämlich under $P_\theta$ i.i.d. $\sim \mc{N}(\mu_X - \mu_Y, 2 \sigma^2)$. Damit kann man t-Test/z-Test in leicht angepasster Form benutzen.
+Sind $X_1, \dots, X_n$ i.i.d. $\sim \mc{N}(\mu_X, \sigma^2)$ und $Y_1, \dots, Y_m$ i.i.d $\sim \mc{N}(\mu_Y, \sigma^2)$ unter $P_\theta$; insbesondere ist $m = n$ und die Varianz $\sigma^2$ bei beiden Stichproben dieselbe. In dieser Situation kann man Tests über den Vergleich von $\mu_X$ und $\mu_Y$ auf den Fall nur einer Strichprobe zurückführen; die Differenzen $Z_i = X_i - Y_i$ sind nämlich under $P_\theta$ i.i.d. $\sim \mc{N}(\mu_X - \mu_Y, 2 \sigma^2)$. Damit kann man t-Test/z-Test in leicht angepasster Form benutzen.
 
 Bemerkung: Wir haben oben angenommen, dass $X_i$ und $Y_i$ unabhängig sind. Allgemeiner wäre $Z_i$ i.i.d. $\sim \mc{N}(\mu_X - \mu_Y, 2 (1 - \rho)\sigma^2$ mit bekannter Korrelation $\rho \in (-1, +1)$.
     \begin{itemize}
@@ -58,7 +58,7 @@ Bemerkung: Wir haben oben angenommen, dass $X_i$ und $Y_i$ unabhängig sind. All
     \end{itemize}
 
 \subsubsection{Ungepaarter Zweistichproben-Test bei $\mc{N}$}
-Sind $X_1, \dots, X_n$ i.i.d. $\sim \mc{N}(\mu_X, \sigma^2)$ und $Y_1, \dots, Y_m$ i.i.d. $\sim(\mu_Y, \sigma^2)$ under $P_\theta$, wobei die Var in beiden Fällen dieselbe ist, aber $m \neq n$ sein kann. Will man einen Vergleich über $\mu_X$ und $\mu_Y$ testen, so kann man nicht mehr paarweise Differenzen bilden. Diesen Test muss man auch benutzen, falls zufällig $m = n$ ist, aber die Daten nicht natürlich gepaart sind. Wie nehmen immer noch an, dass $X_1, \dots, X_n$ und $Y_1, \dots, Y_m$ unabhängig sind.
+Sind $X_1, \dots, X_n$ i.i.d. $\sim \mc{N}(\mu_X, \sigma^2)$ und $Y_1, \dots, Y_m$ i.i.d. $\sim \mc{N}(\mu_Y, \sigma^2)$ under $P_\theta$, wobei die Var in beiden Fällen dieselbe ist, aber $m \neq n$ sein kann. Will man einen Vergleich über $\mu_X$ und $\mu_Y$ testen, so kann man nicht mehr paarweise Differenzen bilden. Diesen Test muss man auch benutzen, falls zufällig $m = n$ ist, aber die Daten nicht natürlich gepaart sind. Wie nehmen immer noch an, dass $X_1, \dots, X_n$ und $Y_1, \dots, Y_m$ unabhängig sind.
 \begin{itemize}
     \ides{Ungepaarter Zweistrichproblen-z-Test:} Ist $\sigma^2$ bekannt, so ist $T := \frac{(\overline{X}_n - \overline{Y}_m) - (\mu_X - \mu_Y)}{\sigma \sqrt{\frac{1}{n} + \frac{1}{m}}} \sim \mc{N}(0, 1)$ under jedem $P_\theta$. $\mu_X - \mu_Y$ ist durch Hypothese $H_0$ bekannt. Die kritischen Werte für den Verwerfungsbereich sind, wie oben, geeignete Quantile der $\mc{N}(0, 1)$-Verteilung.
     \ides{Ungepaarter Zweistichproben-t-Test:} Ist $\sigma^2$ unbekannt, brauchen wir: \\
