--- a/02.tex
+++ b/02.tex
@@ -5,15 +5,17 @@
 \begin{itemize}
     \ides{Zufallsvariable (ZV):} $X: \Omega \to \R$
         \begin{itemize}
-            \item Falls $\Sigma$ endlich/abzählbar dann ist Wertebereich $W(X)$ auch endlich
+            \item Falls $\Sigma$ endlich/abzählbar dann ist Wertebereich $\mc{W}(X)$ auch endlich
         \end{itemize}
-    \ides{Verteilungsfunktion (VF)} von $x$: $F_X : \R \to [0,1]$
+    \ides{Verteilungsfunktion (VF)} von $X$: $F_X : \R \to [0,1]$
         \begin{itemize}
             \item $F_X(t) := P[X \le t] := P[\{\omega \mid X(\omega) \le t\}]$
         \end{itemize}
-    \ides{Gewichtsfunktion:} $p_X: \mc{W}(X) \to [0,1]$
+    \ides{Gewichtsfunktion} von $X$: $p_X: \mc{W}(X) \to [0,1]$
         \begin{itemize}
             \item $p_X(x_k) := P[X = x_k] = P[\{\omega \mid X(\omega) = x_k\}], k = 1, 2, \dots$
+            \item $0 \le p_X(x_k) \le 1, \forall x_k \in \mc{W}(X)$
+            \item $\sum_{x_k \in \mc{W}(X)}p_X(x_k) = 1$
         \end{itemize}
         \ides{Indikatorfunktion:} Sein $A$ eine Ereignis, dann ist $Y = I_A$ die Indikatorfunktion von $A$: $Y(\omega)=
 \begin{cases}
@@ -45,14 +47,11 @@
     \ides{Varianz:} $Var[X] := E[(X - E[X])^2]$
         \begin{itemize}
             \item Definiert falls $E[X^2] < \infty$
-            \ides{Standardabweichung:} $\sigma(X) := \sqrt{Var[X]}$
             \item $Var[X] = \sum_{x_k \in \mc{W}(X)} (x_k - E[X])^2 p_X(x_k)$
+            \item Alternative definition $Var[X] = E[X^2] - (E[X])^2$
+            \item $Var[aX + b] = a^2 Var[X]$
         \end{itemize}
-    \item Seien $Y = aX + b$, dann:
-        \begin{itemize}
-            \item $Var[X] = E[X^2] - (E[X])^2$
-            \item $Var[Y] = Var[aX + b] = a^2 Var[X]$
-        \end{itemize}
+    \ides{Standardabweichung:} $\sigma(X) := \sqrt{Var[X]}$
     \ides{Kovarianz:} $Cov(X,Y) := E[XY] - E[X] E[Y] = E[(X - E[X])(Y - E[Y])]$
     \item $Var[X + Y] = Var[X] + Var[Y] + 2 Cov(X, Y)$
     \item $Cov(X, X) = Var[X]$
@@ -62,20 +61,37 @@
 
 \subsection{Mehrere Zufallsvariable}
 \begin{itemize}
-    \ides{Gemeinsame Verteilungsfunktion:} $F: \R^n \to [0,1]$ seien $X_1, \dots, X_n$ ZV, dann:\\ $F(x_1, \dots, x_n) := P[X_1 \le x_1, \dots, X_n \le x_n]$
-    \ides{Gemeinsame Gewichtsfunktion:} $p: \R^n \to [0,1]$ seien $X_1, \dots, X_n$ diskrete ZV, dann:\\ $p(x_1, \dots, x_n) := P[X_1 = x_1, \dots, X_n = x_n]$
-    \ides{Randverteilung:} Haben $X$ und $Y$ gemeinsame VF $F$, dann ist $F_X: \R \to [0,1]$ die Randverteilung von $X$\\ $F_{X(X)} := P[X \le x] = P[X \le x, Y < \infty] = \lim_{y \to \infty} F(x, y)$
-    \ides{Gewichtsfunktion der Randverteilung:} $p_X: \mc{W}(X) \to [0,1]$ von $X$ ist $p_x(x) = P[X = x] = \sum_{y_j \in \mc{W}(Y)} P[X = x, Y = y_j] = \sum_{y_j \in \mc{W}(Y)} p(x, y_j)$
-\item ZV $X_1, \dots, X_n$ heissen unabhängig, falls $F(x_1, \dots, x_n) = F_{X_1}(x_1) \dots F_{X_n}(x_n)$ oder falls ZV diskret $p(x_1, \dots, x_n) = p_{X_1}(x_1) \dots p_{X_n}(x_n)$
+    \ides{Gemeinsame Verteilungsfunktion:}
+        \begin{itemize}
+            \item $F: \R^n \to [0,1]$
+            \item $F(x_1, \dots, x_n) := P[X_1 \le x_1, \dots, X_n \le x_n]$ für $X_1, \dots, X_n$ ZV
+        \end{itemize}
+    \ides{Gemeinsame Gewichtsfunktion:} 
+        \begin{itemize}
+            \item $p: \R^n \to [0,1]$
+            \item $p(x_1, \dots, x_n) := P[X_1 = x_1, \dots, X_n = x_n]$ für $X_1, \dots, X_n$ diskrete ZV
+        \end{itemize}
+    \ides{(Verteilungsfunktion der) Randverteilung:}
+        \begin{itemize}
+            \item Sofern $X$ und $Y$ gemeinsame VF $F$ haben
+            \item $F_X: \R \to [0,1]$
+            \item $F_X(x) := P[X \le x] = \lim_{y \to \infty} P[X \le x, Y < y] = \lim_{y \to \infty} F(x, y)$
+        \end{itemize}
+    \ides{Gewichtsfunktion der Randverteilung:}
+        \begin{itemize}
+            \item $p_X: \mc{W}(X) \to [0,1]$
+            \item $p_x(x) = P[X = x] = \sum_{y_j \in \mc{W}(Y)} P[X = x, Y = y_j] = \sum_{y_j \in \mc{W}(Y)} p(x, y_j)$
+        \end{itemize}
+    \item ZV $X_1, \dots, X_n$ heissen \textbf{unabhängig}, falls $F(x_1, \dots, x_n) = F_{X_1}(x_1) \dots F_{X_n}(x_n)$ oder falls ZV diskret $p(x_1, \dots, x_n) = p_{X_1}(x_1) \dots p_{X_n}(x_n)$
 \end{itemize}
 
 \subsection{Funktionen von mehreren ZV}
 \begin{itemize}
-    \item Seien $X_1, \dots X_n$ diskrete ZV und $Y = g(X_1, \dots, X_n), g: \R^n \to \R$, dann ist $Y$ eine diskret ZV
-    \item Seien $X_1, \dots X_n$ diskret ZV mit endlichen EW. Sei $Y = a + \sum_{l=1}^{n} b_l X_l$. Dann ist $E[Y] = a + \sum_{l=1}^{n} b_l E[X_l]$
+    \item Seien $X_1, \dots, X_n$ diskrete ZV und $g: \R^n \to \R$, dann ist $Y = g(X_1, \dots, X_n)$ eine diskret ZV
+    \item Seien $X_1, \dots, X_n$ diskret ZV mit endlichen EW und $Y = a + \sum_{l=1}^{n} b_l X_l$. Dann ist $E[Y] = a + \sum_{l=1}^{n} b_l E[X_l]$
     \ides{Summenformel für Varianzen:}\\ $Var [\sum_{i=1}^{n} X_i] = \sum_{i=1}^{n} Var[X_i] + 2 \sum_{i<j} Cov(X_i, X_j)$
     \item Falls $X_1, \dots, X_n$ paarweise unkorreliert dann $Var[\sum_{i=1}^{n} X_i] = \sum_{i=1}^{n} Var[X_i]$
-    \item Seien $X_1, \dots, X_n$ diskret ZV mit endlichen EW. Falls $X_1, \dots, X_n$ unabhängig: $E[\Pi_{i=1}^{n} X_i] = \Pi_{i=1}^{n} E[X_i]$
+    \item Seien $X_1, \dots, X_n$ diskret, unabhängige ZV mit endlichen EW, dann: $E[\Pi_{i=1}^{n} X_i] = \Pi_{i=1}^{n} E[X_i]$
     \item unabhängig $\implies$ paarweise unabhängig $\implies$ unkorreliert
 \end{itemize}
 
@@ -92,6 +108,7 @@
             \item Falls $p_Y(y) > 0$ sonst $0$
         \end{itemize}
     \item Es gilt $\sum_{x_k \in \mc{W}(X)} p_{X \mid Y} (x_k \mid y) = \frac{1}{p_Y(y)} \sum_{x_k \in \mc{W}(X)} p(x_k, y) = 1$
+    \item Analog für Verteilungsfunktion
 \end{itemize}
 
 \subsection{Wichtige diskrete Verteilungen}
@@ -128,12 +145,6 @@
     \item $Var[X] = \frac{1 - p}{p^2}$
 \end{itemize}
 
-\subsubsection{Negativbinomial Verteilung}
-\todo{Oli fragen ob Prüfungsrelevant}
-
-\subsubsection{Hypergeometrische Verteilung}
-\todo{Oli fragen ob Prüfungsrelevant}
-
 \subsubsection{Poisson Verteilung}
 \begin{itemize}
     \item $X \sim \mc{P}(\lambda), \ \lambda \in (0, \infty)$
@@ -145,4 +156,5 @@
         \end{itemize}
     \item $E[X] = \sum_{k=0}^{\infty} kp_X(k) = \sum_{k=1}^{\infty} ke^{-\lambda} \frac{\lambda^k}{k!} = \lambda \sum_{k=1}^{\infty} e^{-\lambda} \frac{\lambda^{k - 1}}{(k - 1)!} = \lambda \sum_{j=1}^{\infty} e^{-\lambda} \frac{\lambda^j}{j!} = \lambda$
     \item $Var[X] = \lambda$
+    \item Für unabhängige ZV $X \sim \mc{P}(\lambda), Y \sim \mc{P}(\mu)$ is $X + Y \sim \mc{P}(\lambda + \mu)$
 \end{itemize}
