--- a/06.tex
+++ b/06.tex
@@ -63,6 +63,9 @@
 \subsubsection{$\mc{X}^2$-Verteilung mit $n$ Freiheitsgraden}
 \begin{itemize}
     \item Diese gehört zu einer stetigen ZV $Y$ mit DF $f_Y(y) = \frac{1}{2^{\frac{n}{2}} \Gamma(\frac{n}{2})}y^{\frac{n}{2} - 1}e^{-\frac{1}{2}y}, \ y \ge 0$.
+        \begin{itemize}
+            \item $\Gamma(z) := \int_{0}^{\infty} t^{z - 1} e^{-t}\mathrm{d}t$  \quad -- $\Gamma(z) := (z - 1)!$
+        \end{itemize}
     \item $E[\mc{X}_n^2] = n$ \quad -- $var[\mc{X}_n^2] = 2n$
     \item Entsteht wie folgt: Sind die ZV $X_1, \dots, X_n$ i.i.d. und $\sim \mc{N}(0, 1)$, so ist die Summe $Y := \sum_{i=1}^{n} X_i^2 \sim \mc{X}_n^2$
         \begin{itemize}
