--- a/07.tex
+++ b/07.tex
@@ -27,8 +27,10 @@
 
 \subsection{Konstruktion von Tests}
 \subsubsection{Likelihood-Quotient (LQ)}
-Sein $L(x_1, \dots, x_n)$ die Likelihood-Funktion. Für $\theta_0 \in \Theta_0$ und $\theta_A \in \Theta_A$ betrachten wir den LQ: $R(x_1, \dots, x_n; \theta_0, \theta_A) := \frac{L(x_1, \dots, x_n; \theta_A)}{L(x_1, \dots, x_n; \theta_0)}$. Ist der LQ gross bedeutet dies, dass die Beobachtungen $x_1, \dots, x_n$ als Resultate im Modell $P_{\theta_A}$ deutlich wahrscheinlicher sind als im Modell $P_{\theta_0}$. Es liegt deshalb nahe $T:= R(X_1, \dots, X_n; \theta_0, \theta_A)$ und $K := (c, \infty)$ zu wählen, wenn man $\theta_0$ gegen $\theta_A$ testen will.
+Sein $L(x_1, \dots, x_n)$ die Likelihood-Funktion. Für $\theta_0 \in \Theta_0$ und $\theta_A \in \Theta_A$ betrachten wir den LQ: $R(x_1, \dots, x_n; \theta_0, \theta_A) := \frac{L(x_1, \dots, x_n; \theta_A)}{L(x_1, \dots, x_n; \theta_0)}$. Ist der LQ gross bedeutet dies, dass die Beobachtungen $x_1, \dots, x_n$ als Resultate im Modell $P_{\theta_A}$ deutlich wahrscheinlicher sind als im Modell $P_{\theta_0}$. Es liegt deshalb nahe $T:= R(X_1, \dots, X_n; \theta_0, \theta_A)$ und $K := (c, \infty)$ zu wählen, wenn man $\theta_0$ gegen $\theta_A$ testen will
 \begin{itemize}
+    \item D.h. $R$ gross $\implies$ wir verwerfen $H_0$
+    \item Häufig nimmt man nicht den ganzen Quotienten als Test, sondern nur den Teil, welcher $R$ gross mach
     \item Sind Hypothese und Alternative beide einfach, so ist dieser Test optimal.
 \end{itemize}
 
@@ -43,7 +45,7 @@ Bei zusammengesetzten $\theta_0/\theta_A$ betrachtet man den \textbf{verallgemei
 
 \subsection{Beispiele}
 \subsubsection{z-Test (Test für EW bei bekannter Var)}
-Sind $X_1, \dots, X_n$ i.i.d. $\sim \mc{N}(\mu, \sigma^2)$ unter $P_\theta$ mit bekannter Var $\sigma^2$, und wir wollen die Hypothese $H_0: \theta = \theta_0$ testen. Mögliche Alternativen $H_A$ sind $\theta > \theta_0$ oder $\theta < \theta_0$ (\textbf{einseitig}) oder $\theta \neq \theta_0$ (\textbf{zweiseitig}). Die Teststatistik ist $T := \frac{\overline{X}_n - \theta_0}{\frac{\sigma}{\sqrt{n}}} \sim \mc{N}(0, 1)$ unter $P_{\theta_0}$. Der kritische Bereich $K$ ist von der Form $(c_>, \infty)$, $(-\infty, c_<)$, bzw. $(-\infty, -c_{\neq}) \cup (c_{\neq}, + \infty)$. Die Konstanten $c_>, c_<, c_{\neq}$ bestimmt man zum gewählten Niveau mit Hilfe der Verteilung von $T$ unter $P_{\theta_0}$. Zum Beispiel liefert die Bedingung $\alpha = P_{\theta_0}[T \in K_>] = P_{\theta_0}[T > c_>] = 1 - P_{\theta_0}[T \le c_>] = 1 - \Phi(c_>)$, dass $c_> = \Phi^{-1}(1 - \alpha) =: z_{1 - \alpha}$ das sogenannte $(1 - \alpha)$-\textbf{Quantil} der $\mc{N}(0, 1)$ Verteilung sein muss; Für $\theta > \theta_0$ verwirft man $H_0$, falls $\overline{X}_n > \theta_0 + z_{1 - \alpha} \frac{\sigma}{\sqrt{n}}$ ist. Analog ist $c_< = z_\alpha = -z_{1 - \alpha}$ und $c_{\neq} = z_{1 - \frac{\alpha}{2}}$, wobei wir die Symmetrie der $\mc{N}(0, 1)$ Verteilung ausnutzen; Es gilt nämlich $\alpha = P_{\theta_0}[t < c_<] = P_{\theta_0}[T > -c_<]$ für $-c_< = z_{1 - \alpha}$ und $\alpha = P_{\theta_0}[T \in K_{\neq}] = P_{\theta_0} [T < -c_{\neq}] + P_{\theta_0}[T > c_{\neq}] = \Phi(-c_{\neq}) + 1 - \Phi(c_{\neq}) = 2(1 - \Phi(c_{\neq}))$
+Sind $X_1, \dots, X_n$ i.i.d. $\sim \mc{N}(\mu, \sigma^2)$ unter $P_\theta$ mit bekannter Var $\sigma^2$, und wir wollen die Hypothese $H_0: \theta = \theta_0$ testen. Mögliche Alternativen $H_A$ sind $\theta > \theta_0$ oder $\theta < \theta_0$ (\textbf{einseitig}) oder $\theta \neq \theta_0$ (\textbf{zweiseitig}). Die Teststatistik ist $T := \frac{\overline{X}_n - \theta_0}{\frac{\sigma}{\sqrt{n}}} \sim \mc{N}(0, 1)$ unter $P_{\theta_0}$. Der kritische Bereich $K$ ist von der Form $(c_>, \infty)$, $(-\infty, c_<)$, bzw. $(-\infty, -c_{\neq}) \cup (c_{\neq}, + \infty)$. Die Konstanten $c_>, c_<, c_{\neq}$ bestimmt man zum gewählten Niveau mit Hilfe der Verteilung von $T$ unter $P_{\theta_0}$. Zum Beispiel liefert die Bedingung $\alpha = P_{\theta_0}[T \in K_>] = P_{\theta_0}[T > c_>] = 1 - P_{\theta_0}[T \le c_>] = 1 - \Phi(c_>)$, dass $c_> = \Phi^{-1}(1 - \alpha) =: z_{1 - \alpha}$ das sogenannte $(1 - \alpha)$-\textbf{Quantil} der $\mc{N}(0, 1)$ Verteilung sein muss; Für $\theta > \theta_0$ verwirft man $H_0$, falls $\overline{X}_n > \theta_0 + z_{1 - \alpha} \frac{\sigma}{\sqrt{n}}$ ist. Analog ist $c_< = z_\alpha = -z_{1 - \alpha}$ und $c_{\neq} = z_{1 - \frac{\alpha}{2}}$, wobei wir die Symmetrie der $\mc{N}(0, 1)$ Verteilung ausnutzen; Es gilt nämlich $\alpha = P_{\theta_0}[t < c_<] = P_{\theta_0}[T > -c_<]$ für $-c_< = z_{1 - \alpha}$ und $\alpha = P_{\theta_0}[T \in K_{\neq}] = P_{\theta_0} [T < -c_{\neq}] + P_{\theta_0}[T > c_{\neq}] = \Phi(-c_{\neq}) + 1 - \Phi(c_{\neq}) = 2 - 2\Phi(c_{\neq}))$
 
 \subsubsection{t-Test (Test für EW bei unbekannter Var)}
 Sind $X_1, \dots, X_n$ i.i.d. $\sim \mc{N}(\mu, \sigma^2)$ unter $P_{\overrightarrow{\theta}}$ wobei $\overrightarrow{\theta} = (\mu, \sigma^2)$ und die Var $\sigma^2$ ist unbekannt. Wir wollen die Hypothese $\mu = \mu_0$ testen. Explizit: $\Theta_0 = \{\mu_0\} \times (0, \infty) = \{\overrightarrow{\theta} = (\mu, \sigma^2) \mid \mu = \mu_0\}$. Die Teststatistik ist $T := \frac{\overline{X}_n - \mu_0}{\frac{S}{\sqrt{n}}} \sim t_{n - 1}$ unter $P_{\theta_0}$. Wir ersetzen unbekannte Var durch Schätzer $S^2 = \frac{1}{n - 1} \sum_{i=1}^{n} (X_i - \overline{X}_n)^2$ für $\sigma^2$.
