NEW: Basic general section

--- a/main.tex
+++ b/main.tex
@@ -6,6 +6,7 @@
 \begin{document}
 \begin{multicols*}{4}
     \raggedright
+    \input{00.tex}
     \part{Wahrscheinlichkeiten}
     \input{01.tex}
     \input{02.tex}
