--- a/math.sty
+++ b/math.sty
@@ -26,6 +26,11 @@
 
 \newcommand{\notimplies}{\;\not\!\!\!\implies}
 
+\DeclareMathOperator\arcsinh{arcsinh}
+\DeclareMathOperator\arccosh{arccosh}
+\DeclareMathOperator\arctanh{arctanh}
+
+
 % stuff for integrals
 \newcommand{\intl}{\int\limits}
 \newcommand{\rmd}{\mathrm{d}}
