NEW: Section on planning

--- a/main.tex
+++ b/main.tex
@@ -4,8 +4,7 @@
 \usepackage{math}
 
 \begin{document}
-\begin{multicols*}{3}
-    \input{01.tex}
-    %\input{02.tex}
+\begin{multicols*}{4}
+    \input{06_Planning.tex}
 \end{multicols*}
 \end{document}
