NEW: Prelude summary

--- a/main.tex
+++ b/main.tex
@@ -33,4 +33,6 @@
     \include{./12_OperationalSemantics.tex}
     \include{./13_AxiomaticSemantics.tex}
     \include{./14_ModelChecking.tex}
+    \part{Appendix}
+    \include{./15_Prelude.tex}
 \end{document}
