IMPROVE: Alternative way for changing font size

--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,8 @@
-\documentclass[8pt]{article}
+\documentclass{article}
+
+% Scalable font
+\usepackage{lmodern}
+\usepackage[fontsize=8pt]{scrextend}
 
 \usepackage{cheatsheet}
 \usepackage{math}
