NEW: Map based localisation

--- a/main.tex
+++ b/main.tex
@@ -7,8 +7,10 @@
 \usepackage{cheatsheet}
 \usepackage{math}
 
+
 \begin{document}
 \begin{multicols*}{4}
+    \input{05_Localization.tex}
     \input{06_Planning.tex}
 \end{multicols*}
 \end{document}
