--- a/math.sty
+++ b/math.sty
@@ -23,6 +23,7 @@
 \newcommand{\argmax}{\mathop{\mathrm{argmax}}}
 \newcommand{\mx}{\mathop{\mathrm{max}}}
 \newcommand{\bigcupdot}{\bigcup \hspace{-0.35cm} \cdot}
+\newcommand{\transpose}{\mathsf{T}}
 
 \newcommand{\notimplies}{\;\not\!\!\!\implies}
 
