--- a/main.tex
+++ b/main.tex
@@ -10,6 +10,7 @@
 
 \begin{document}
 \begin{multicols*}{4}
+    \input{04_Perception.tex}
     \input{05_Localization.tex}
     \input{06_Planning.tex}
 \end{multicols*}
