UPDATE: math style

--- a/math.sty
+++ b/math.sty
@@ -4,6 +4,8 @@
 \newcommand{\bs}{\boldsymbol}
 % Shortcut to write caligraphic math symbols
 \newcommand{\mc}{\mathcal}
+\newcommand{\ub}{\underline}
+\newcommand{\ob}{\overline}
 % norm
 \newcommand{\norm}[1]{\left| \!\:\! \left| #1 \right| \!\:\! \right|}
 
@@ -21,6 +23,13 @@
 \newcommand{\argmax}{\mathop{\mathrm{argmax}}}
 \newcommand{\mx}{\mathop{\mathrm{max}}}
 \newcommand{\bigcupdot}{\bigcup \hspace{-0.35cm} \cdot}
+\newcommand{\transpose}{\mathsf{T}}
+
+\newcommand{\notimplies}{\;\not\!\!\!\implies}
+
+\DeclareMathOperator\arcsinh{arcsinh}
+\DeclareMathOperator\arccosh{arccosh}
+\DeclareMathOperator\arctanh{arctanh}
 
 
 % stuff for integrals
@@ -40,9 +49,6 @@
 
 % big-o notation
 \newcommand{\bigO}{\mathcal{O}}
-
-% 'with' in set notation
-\newcommand{\with}{\;|\;}
 
 % algorithms
 \usepackage{algorithmic}
